--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -11,8 +11,9 @@ nav {
 }
 
 .sub {
-  font-size: 1.25rem;
-  font-style: italic;
+  font-size: 1.125rem;
+  font-weight: 500;
+  // font-style: italic;
 }
 .nav-items {
   display: flex;
@@ -30,6 +31,7 @@ nav {
   gap: .6rem;
   // justify-content: center;
   align-items: center;
+  text-decoration: none;
 }
 
 .uci {
