--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -78,16 +78,11 @@ main {
   width: 100%;
 }
 
-footer {
-  width: 100%;
-  background-color: #eee;
-  padding: 1rem 2rem;
-  text-align: center;
-}
+
 
 a {
   color: inherit;
-  text-decoration: none;
+  // text-decoration: none;
 }
 
 // wordpress
