--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -7,7 +7,7 @@ nav {
   justify-content: center;
   align-items: center;
   padding: 1rem 2rem;
-  background-color: #fafafa;
+  background-color: $header-col;
 }
 
 .sub {
