--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -51,6 +51,11 @@ $header-col: #00000010;
   src: url("../lib/fonts/neue_kabel_eb.otf");
 }
 
+@font-face {
+  font-family: 'Overpass';
+  src: url("https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap")
+}
+
 // general
 
 * {
@@ -81,14 +86,20 @@ main {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Figtree";
-  font-weight: 700;
+  font-family: "Overpass";
+  font-weight: 800;
 }
 
 
 a {
-  color: inherit;
-  // text-decoration: none;
+  color: $uci-blue;
+  text-decoration: none;
+  transition: 0.2s ease-in-out;
+  &:hover {
+    // text-decoration: underline;
+    background-color: #0000001a;
+    // border-radius: 0.25rem;
+  }
 }
 
 // wordpress
