--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -23,6 +23,7 @@ footer {
   flex-direction: row;
   justify-content: space-between;
   & h3 {
+    font-size: 0.875rem;
     font-weight: 700;
     text-transform: uppercase;
   }
@@ -41,11 +42,28 @@ footer {
       }
     }
   }
-  & > .socials {
+
+  & .socials {
+    display: flex;
+    gap: 0.5rem;
+    flex-direction: column;
+    align-items: flex-end;
+    & > .social-icons {
+      display: flex;
+      gap: 1rem;
+      justify-content: flex-end;
+      // justify-content: space-between;
+      & > a {
+        color: $uci-blue;
+        text-decoration: none;
+        font-size: 1.5rem;
+      }
+    }
     & > .footer-logo {
       font-family: "Neue Kabel EB";
       color: $uci-gray;
       font-size: 2.5rem;
+      line-height: 2rem;
       font-weight: 700;
       display: flex;
       flex-direction: row;
