--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -6,24 +6,38 @@ nav {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 1rem 2rem;
+  padding: 1rem 2rem 0 2rem;
   background-color: $header-col;
+  gap: 0.5rem;
 }
 
 .sub {
-  font-size: 1.125rem;
-  font-weight: 500;
-  // font-style: italic;
+  font-family: "Overpass";
+  font-size: 1rem;
+  font-weight: 700;
+  // text-transform: uppercase;
 }
+
 .nav-items {
+  font-family: "Overpass";
+  font-size: 0.875rem;
+  font-weight: 700;
+  text-transform: uppercase;
   display: flex;
-  gap: 1rem;
-  margin-top: 1rem;
+
+  transition: 0.2s ease-in-out;
+  & > a {
+    padding: 1rem;
+    &:hover {
+      background-color: $uci-blue;
+      color: white;
+    }
+  }
 }
 
 // uci ite logo
 .logo {
-  font-size: 4rem;
+  font-size: 3rem;
   font-weight: 700;
   font-family: "Neue Kabel EB";
   display: flex;
