--- a/src/components/Carousel.scss
+++ b/src/components/Carousel.scss
@@ -1,5 +1,14 @@
 @import "../app/globals.scss";
 
+@media screen and (max-width: 640px) {
+  .slick-slider {
+    // width: 100%;
+    max-height: 12rem;
+  }
+  
+}
+
+
 .slick-slider {
   width: 100%;
   // position: relative;
