--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -1,15 +1,22 @@
 @import "../app/globals.scss";
 
+@media screen and (max-width: $mobile-cutoff) {
+  .info {
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: center;
+    // flex-direction: column !important;
+    // align-items: center;
+  }
+}
+
 footer {
   font-size: 0.875rem;
   width: 100%;
   background-color: #eee;
-  // padding: 1rem 2rem;
   text-align: center;
   display: flex;
   flex-direction: column;
-  // flex-direction: row;
-  // justify-content: center;
   align-items: center;
   & > div {
     padding: 1rem;
@@ -17,6 +24,7 @@ footer {
 }
 
 .info {
+  gap: 1rem;
   width: min(100%, $main-max);
   text-align: left;
   display: flex;
