--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -84,10 +84,6 @@ footer {
 }
 
 .copyright {
-  background-color: $header-col;
+  background-color: $subheader-col;
   width: 100%;
-  // & a {
-  //   color: $uci-yellow;
-  //   text-decoration: none;
-  // }
 }
