--- a/src/components/Carousel.scss
+++ b/src/components/Carousel.scss
@@ -1,9 +1,13 @@
 @import "../app/globals.scss";
 
+$hero-max: 36rem;
+$hero-max-mobile: min(24rem, 50vh);
+
 @media screen and (max-width: $mobile-cutoff) {
-  .slick-slider {
+  .slick-list, .slick-track, .slick-list > *, .img-container > img {
     // width: 100%;
-    max-height: 12rem;
+    height: 100%;
+    max-height: $hero-max-mobile !important;
   }
   
 }
@@ -17,16 +21,18 @@
 .img-container {
   position: relative;
   display: inline-block;
+  overflow: hidden;
   width: 100%;
-  height: 35rem;
-  object-fit: cover;
-  object-position: center;
+  height: 100%;
+  max-height: $hero-max;
+  // object-fit: cover;
+  // object-position: center;
   transition: 0.25s ease-in-out;
   & > .caption {
     display: flex;
     flex-direction: column;
     font-family: $header-font;
-    filter: drop-shadow(2px 2px 2px black);
+    filter: drop-shadow(1px 1px 0.25rem $text-col) drop-shadow(1px 1px 0.5rem $text-col);
     text-align: center;
     position: absolute;
     z-index: 15;
@@ -41,22 +47,49 @@
 
     }
     & > .location {
-      font-size: 1.25rem;
-      font-weight: 400;
-      font-style: italic;
+      font-size: 1rem;
+      font-weight: 900;
+      text-transform: uppercase;
+      letter-spacing: 0.1rem;
+      // font-style: italic;
     }
   }
 }
 
 .slick-slide img {
+  // position: absolute;
   z-index: -9;
   width: 100%;
-  height: 100%;
+  height: $hero-max; // works for now?
+  max-width: none !important;
   object-fit: cover;
   transition: 0.25s ease-in-out;
-  // object-position: ;
+  max-height: $hero-max;
+  // object-position: 50% 50%;
   &:hover {
     // cursor: pointer;
     filter: brightness(0.8);
+  }
+}
+
+.slick-dots {
+  position: absolute;
+  bottom: 1rem;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+  & > li {
+    width: 1rem;
+    height: 0.5rem;
+    border-radius: 10%;
+    background-color: #ffffff75;
+    &.slick-active {
+      background-color: white;
+    }
+    & > button::before {
+      display: none;
+    }
   }
 }
