--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -11,44 +11,44 @@ $header-font: "Overpass";
 $mobile-cutoff: 720px;
 
 // dark mode
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+// @media (prefers-color-scheme: dark) {
+//   :root {
+//     --foreground-rgb: 255, 255, 255;
+//     --background-start-rgb: 0, 0, 0;
+//     --background-end-rgb: 0, 0, 0;
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+//     --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
+//     --secondary-glow: linear-gradient(
+//       to bottom right,
+//       rgba(1, 65, 255, 0),
+//       rgba(1, 65, 255, 0),
+//       rgba(1, 65, 255, 0.3)
+//     );
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+//     --tile-start-rgb: 2, 13, 46;
+//     --tile-end-rgb: 2, 5, 19;
+//     --tile-border: conic-gradient(
+//       #ffffff80,
+//       #ffffff40,
+//       #ffffff30,
+//       #ffffff20,
+//       #ffffff10,
+//       #ffffff10,
+//       #ffffff80
+//     );
 
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
+//     --callout-rgb: 20, 20, 20;
+//     --callout-border-rgb: 108, 108, 108;
+//     --card-rgb: 100, 100, 100;
+//     --card-border-rgb: 200, 200, 200;
+//   }
+// }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
+// @media (prefers-color-scheme: dark) {
+//   html {
+//     color-scheme: dark;
+//   }
+// }
 
 // fonts
 
@@ -59,7 +59,13 @@ $mobile-cutoff: 720px;
 
 @font-face {
   font-family: "Overpass";
-  src: url("https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap")
+  src: url("../lib/fonts/overpass.ttf");
+}
+
+@font-face {
+  font-family: "Overpass";
+  src: url("../lib/fonts/overpass-it.ttf");
+  font-style: italic;
 }
 
 // general
