--- a/src/app/wp.scss
+++ b/src/app/wp.scss
@@ -1,6 +1,8 @@
 @import "../app/globals.scss";
 
-h1 {
+$max-image-height: 34rem;
+
+main h1 {
   text-transform: uppercase;
   color: $uci-blue;
   font-size: 2rem;
@@ -8,26 +10,37 @@ h1 {
   line-height: 3rem;
 }
 
-h2 {
+main h2 {
   line-height: 2.5rem;;
 }
 
-h3 {
+main h3 {
   line-height: 2rem;
 }
 
-hr {
+main hr {
   margin: 1rem 0;
 }
 
-p {
-  margin: 0.5rem 0;
+main p {
+  padding: .75rem 0;
 }
 
-img {
+main img {
   margin: auto;
+  padding: 1rem 0;
   display: block;
   max-width: 100%;
+  // height: 100%;
+  object-fit: contain;
+  max-height: $max-image-height;
+}
+
+.wp-block-embed__wrapper {
+  margin: 1rem 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 figure.wp-block-gallery-2 {
