--- a/src/app/wp.scss
+++ b/src/app/wp.scss
@@ -2,16 +2,24 @@
 
 $max-image-height: 34rem;
 
+@media screen and (max-width: $mobile-cutoff) {
+  main h1 {
+    font-size: 2rem;
+    text-align: center;
+  }
+  
+}
+
 main h1 {
   text-transform: uppercase;
   color: $uci-blue;
   font-size: 2rem;
-  font-weight: 900;
+  font-weight: 800;
   line-height: 3rem;
 }
 
 main h2 {
-  line-height: 2.5rem;;
+  line-height: 2.5rem;
 }
 
 main h3 {
@@ -28,12 +36,18 @@ main p {
 
 main img {
   margin: auto;
-  padding: 1rem 0;
+  height: auto;
+  margin: 1rem auto 1rem auto;
   display: block;
   max-width: 100%;
   // height: 100%;
   object-fit: contain;
   max-height: $max-image-height;
+}
+
+main hr {
+  border: 2px solid $uci-blue;
+  margin: 1rem 0;
 }
 
 .wp-block-embed__wrapper {
@@ -47,29 +61,3 @@ figure.wp-block-gallery-2 {
   width: 100px;
   height: 100px;
 }
-
-// homepage carousel
-// div.wp-block-coblocks-gallery-carousel > div > div > .swiper-wrapper {
-//   display: flex;
-//   flex-direction: row;
-//   gap: 1rem;
-//   position: static;
-//   flex-wrap: wrap;
-//   height: auto;
-//   width: auto;
-//   & > .swiper-slide {
-//     & > div > figure { // image
-//       max-height: 300px;
-//       & > img {
-//         max-width: 300px;
-//         object-fit: contain;
-//       }
-//     }
-//     & > div > figcaption { // caption
-//       font-size: 0.875rem;
-//       font-weight: 700;
-//       text-transform: uppercase;
-//       color: $uci-blue;
-//     }
-//   }
-// }
