--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -6,7 +6,7 @@ $mobile-navheight: 4.5rem; // needed for calculations, kinda janky
     max-height: $mobile-navheight !important;
     height: 100%;
   }
-  .nav-items {
+  .nav-items{
     display: none;
     z-index: 100;
     top: $mobile-navheight;
@@ -71,23 +71,38 @@ nav {
 }
 
 .nav-items {
-  font-family: $header-font;
-  font-size: 0.875rem;
-  font-weight: 700;
-  text-transform: uppercase;
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  background-color: $header-col;
-
   transition: 0.2s ease-in-out;
-  & > a {
-    padding: 1rem;
-    &:hover {
-      background-color: $uci-blue;
-      color: white;
+  width: 100%;
+  height: auto;
+  & > ul {
+    box-sizing: border-box;
+    height: auto;
+    list-style-type: none;
+    width: 100%;
+    display: flex;
+    font-family: $header-font;
+    font-size: 0.875rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    justify-content: center;
+    background-color: $header-col;
+    & > li {
+      box-sizing: border-box;
+      padding: 1rem;
+      &:hover {
+        background-color: $uci-blue;
+        color: white;
+      }
+      & > a {
+        box-sizing: border-box;
+        // &:hover {
+          // background-color: $uci-blue;
+          // color: white;
+        // }
+      }
     }
   }
+    
 }
 
 // uci ite logo
