--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -68,6 +68,12 @@ $mobile-navheight: 4.5rem; // needed for calculations, kinda janky
   }
 }
 
+.house-icon {
+  padding: 1rem;
+  font-size: 0.875rem;
+  line-height: 0.875rem;
+}
+
 .menu-button {
   display: none;
 }
@@ -94,7 +100,7 @@ nav {
   transition: 0.2s ease-in-out;
   width: 100%;
   height: auto;
-  & > ul {
+  & ul {
     box-sizing: border-box;
     list-style-type: none;
     width: 100%;
@@ -106,7 +112,7 @@ nav {
     font-weight: 700;
     text-transform: uppercase;
     background-color: $header-col;
-    & > a {
+    &  a {
       display: flex;
       flex-direction: row;
       gap: 0.25rem;
@@ -131,31 +137,41 @@ nav {
   }
 }
 
+.has-children {
+  position: relative;
+}
+
 .dropdown {
   position: relative;
   display: inline-block;
+}
 
-  .dropdown-content {
-    right: 0;
-    top: 1.5rem;
-    white-space: nowrap;
+.dropdown-content {
+  // right: 0;
+  // top: 1.5rem;
+  position: absolute;
+  width: 100%;
+  white-space: nowrap;
+  // padding: 1rem;
+  background-color: $header-col;
+  // min-width: 10rem;
+  // box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
+  z-index: 1;
+  & > ul, li {
+    width: 100%;
+  }
+  & a {
+    // color: white;
     padding: 1rem;
-    position: absolute;
-    background-color: $header-col;
-    min-width: 10rem;
-    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
-    z-index: 1;
-    & > a {
-      color: white;
-      padding: 1rem;
-      text-decoration: none;
-      display: block;
-      &:hover {
-        background-color: $uci-blue;
-      }
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    &:hover {
+      background-color: $uci-blue;
     }
   }
 }
+
 
 .dropdown-arrow {
   z-index: 14;
