styling fixes, dropdown sort of works

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -2,6 +2,7 @@
 $uci-yellow: #fbd30b;
 $uci-yellow-dark: rgb(233, 185, 13);
 $uci-blue: #006791;
+$uci-blue-dark: #004c6d;
 $uci-gray: #999998;
 $header-col: #f0f0f0;
 $subheader-col: #dddddd;
