--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -26,14 +26,26 @@ $mobile-navheight: 4.5rem; // needed for calculations, kinda janky
       // width: auto !important;
       flex-direction: column;
       align-items: start !important;
+      & > li {
+        width: 100% !important;
+        // display: flex;
+        // flex-direction: row;
+        // justify-content: space-between;
+        // align-items: center;
+        // & > a {
+        //   width: 100% !important;
+        // }
+      }
     }
     & .dropdown-arrow {
       // margin: -1rem -1rem -1rem 0;
       // margin: 0 !important;
       // padding: 1rem 1rem 1rem 0.25rem;
       padding: 1rem 2rem;
+      display: none;
     }
     & .dropdown-content {
+      display: block !important;
       position: static !important;
       padding: 0 0 0 2rem !important;
       box-shadow: none !important;
@@ -143,7 +155,7 @@ nav {
 
 .dropdown {
   position: relative;
-  display: inline-block;
+  display: none;
 }
 
 .dropdown-content {
