--- a/src/app/wp.scss
+++ b/src/app/wp.scss
@@ -7,7 +7,6 @@ $max-image-height: 34rem;
     font-size: 2rem;
     text-align: center;
   }
-  
 }
 
 main h1 {
@@ -42,7 +41,7 @@ main img {
   max-width: 100%;
   // height: 100%;
   object-fit: contain;
-  max-height: $max-image-height;
+  // max-height: $max-image-height;
 }
 
 main hr {
@@ -60,4 +59,35 @@ main hr {
 figure.wp-block-gallery-2 {
   width: 100px;
   height: 100px;
+}
+
+// buttons
+.wp-block-button {
+  margin: 1rem 0;
+  display: flex;
+  justify-content: center;
+  & > a {
+    color: white;
+    background-color: $uci-blue;
+    padding: 1rem 2rem;
+    border-radius: 8px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 700;
+    transition: background-color .3s;
+    &:hover {
+      background-color: $uci-blue-dark;
+    }
+  }
+}
+
+.is-layout-flex {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+.is-content-justification-center {
+  justify-content: center;
 }
