--- a/src/app/wp.scss
+++ b/src/app/wp.scss
@@ -56,9 +56,52 @@ main hr {
   align-items: center;
 }
 
-figure.wp-block-gallery-2 {
-  width: 100px;
-  height: 100px;
+figure.wp-block-gallery {
+  display: flex;
+  position: relative;
+  flex-wrap: nowrap;
+  justify-content: center;
+  gap: 1rem;
+  box-sizing: border-box;
+  // margin: 1rem 0;
+  & > div {
+    flex: 1 1 100%;
+    max-width: 100%;
+  }
+  & img {
+    // max-width: 40%;
+    // width: 100%;
+    height: 100%;
+
+    margin: 0;
+    object-fit: cover;
+  }
+}
+
+figure.wp-block-image {
+  position: relative;
+}
+
+.wp-block-spacer {
+  height: 1rem !important;
+}
+
+figcaption.wp-element-caption {
+  // margin: 1rem 0;
+  font-size: 14px;
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  // right: 0;
+  left: 0;
+  bottom:0;
+  // left: 0;
+  padding: 1rem;
+  color: white;
+  background: linear-gradient(0deg,#000000cd,#0000004d 90%,#0000);
+  // width: 100%;
+  // font-style: italic;
+  // font-size: 0.8rem;
 }
 
 // buttons
@@ -91,3 +134,6 @@ figure.wp-block-gallery-2 {
 .is-content-justification-center {
   justify-content: center;
 }
+
+// coblocks
+
