--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -101,7 +101,7 @@ nav {
 
 .sub {
   color: white;
-  font-family: $subheader-font;
+  font-family: $ite-font;
   font-size: 1.25rem;
   display: flex;
   flex-direction: row;
