--- a/src/components/Sponsors.scss
+++ b/src/components/Sponsors.scss
@@ -7,15 +7,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  // gap: 1rem;
+  gap: 1rem;
   padding-bottom: 1.5rem;
   width: 100%;
   margin-bottom: 1.5rem;
-  & > h3 {
-    font-family: $subheader-font;
-    font-size: 1.5rem;
-    // margin-bottom: 1rem;
-  }
+
   & > hr {
     width: 65%;
     margin: 1.5rem;
@@ -23,7 +19,7 @@
   }
   & > p {
     text-align: center;
-    margin-top: 1.5rem;
+    margin-top: .5rem;
     font-style: italic;
     font-size: 14px;
     max-width: min(95vw, $main-max);
@@ -33,11 +29,25 @@
   }
 }
 
+.sponsor-box {
+  background-color: rgba(0, 0, 0, 0.15);
+  // border-radius: 1rem;
+  padding: 1.5rem;
+  width: 100%;
+  text-align: center;
+  & > h3 {
+    font-family: $subheader-font;
+    font-size: 1.5rem;
+    color: $subheader-col;
+    // margin-bottom: 1rem;
+  }
+}
+
 .thanks-sponsors {
   background-color: $uci-blue-dark;
   width: 100%;
   padding: 1rem 0;
-  margin-bottom: 1.5rem;
+  margin-bottom: .5rem;
   font-family: $header-font;
   font-size: 1.5rem;
   text-transform: uppercase;
