1st draft banner

--- a/src/components/Banner.scss
+++ b/src/components/Banner.scss
@@ -2,10 +2,10 @@
 
 .banner {
   font-size: 0.875rem;
-  position: absolute;
+  // position: absolute;
   z-index: 1000;
-  color: white;
-  background-color: #33003350;
+  color: #fcf4d1;
+  background-color: #ff7810;
   width: 100vw;
   text-align: center;
   padding: .5rem;
