--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -4,10 +4,11 @@ $mobile-navheight: 4.5rem; // needed for calculations, kinda janky.
 
 @media screen and (max-width: $mobile-cutoff) {
   nav {
-    max-height: $mobile-navheight !important;
     height: 100%;
   }
   .nav-items {
+    // max-height: $mobile-navheight !important;
+
     display: none;
     z-index: 100;
     top: $mobile-navheight;
@@ -70,11 +71,13 @@ $mobile-navheight: 4.5rem; // needed for calculations, kinda janky.
     display: none !important;
   }
   .logo-wrapper {
+    max-height: $mobile-navheight !important;
     flex-direction: row !important;
     justify-content: space-between !important;
     padding: .5rem 1.5rem !important;
     height: $mobile-navheight;
   }
+
   .logo {
     height: 3rem !important;
     width: 9rem !important;
@@ -209,6 +212,7 @@ nav {
   align-items: center;
   width: 100%;
   position: relative;
+
   & > .join-button {
     position: absolute;
     color: black;
@@ -225,6 +229,20 @@ nav {
       // border-color: white;
       color: white;
     }
+  }
+}
+
+.banner-announcement {
+  width: 100%;
+  font-size: 0.875rem;
+  text-align: center;
+  color: white;
+  background-color: #ff7810;
+  padding: 0.25rem 0;
+  & > a {
+    color: white;
+    font-weight: 500;
+    text-decoration: underline;
   }
 }
 
